fix: marker serialization
Signed-off-by: SettingDust <settingdust@gmail.com>